# public-cloud-info-service

./: .bumpversion.cfg  .gitignore  .rubocop.yml  .rubocop_todo.yml  .travis.yml  Dockerfile.aws  Dockerfile.sle15  Gemfile  Gemfile.development  Gemfile.production  Makefile  README.md  README.rst  Rakefile  SUSE.rst  amazon.xml  app.rb  config.ru  google.xml  index.html  manifest.yml  microsoft.xml  oracle.xml  publicCloudInfo-server.conf  publicCloudInfo-server.conf.template  publicCloudInfo-server.spec  publicCloudInfoSrv.apache-passenger-conf-sample  publicCloudInfoSrv.spec  requirements.txt  serverless_app.py  setup.cfg  setup.py  template.yaml  test-requirements.txt
.github/workflows/: ci-workflow.yml  ruby.yml
config/: puma.rb
next_generation/: Dockerfile  Dockerfile.aws  Makefile  README.rst  app.py  local_test_env.json  models.py  requirements.txt  serverless_app.py  setup.cfg  setup.py  template.yaml  test-requirements.txt
next_generation/pint_server/: app.py  database.py  models.py
next_generation/pint_server/tests/functional/: conftest.py  test_function_app.py
next_generation/pint_server/tests/loadtest/: loadtest.py
next_generation/tests/unit/: README.md  conftest.py  mock_pint_data.py  test-requirements.txt  test_app.py
package/: _service  python-PintServer.changes  python-PintServer.spec
pint_server/: __init__.py  alembic.ini.sample  app.py  data_update.py  database.py  models.py  schema_upgrade.py
pint_server/pint_db_migrate/: env.py  migrate.cfg
pint_server/pint_db_migrate/versions/: 001_in_the_beginning.py  14ae3b1b5e81_image_dates_validation.py  3a1b9b52bd78_drop_migrate_version_table.py  528cb85d6ad3_add_ipv6_column.py  79a9f370cd0d_add_cspname_column_to_amazonimages.py  8c5fc3cd9b18_microsoftimages_unique_constraint.py  9948de882722_in_the_beginning.py  b381843009e0_add_servers_id.py  b381843009e0_trying_enums.py  b5fc4b5d23b1_changeinfo_validation.py  b720d8b8b775_set_server_type_name_not_null.py  e2bdb3a5b1b4_primary_keys_updates.py  e937749e3f8b_servers_partial_unique_keys.py  ee82c541fae0_changeinfo_urls_end_in_slash.py
pint_server/tests/functional/: conftest.py  test_function_app.py
pint_server/tests/loadtest/: loadtest.py  locustfile.py
pint_server/tests/unit/: conftest.py  mock_pint_data.py  test_app.py
public/: index.html
spec/: spec_helper.rb  test_app.rb
spec/features/: app_spec.rb
spec/fixtures/: framework-amazon.xml  framework-google.xml  framework-hp.xml  framework-microsoft.xml  framework-oracle.xml  frameworks.xml
spec/fixtures/pint-data/: .bumpversion.cfg
spec/fixtures/v1/: data-version.xml  providers.xml
(+44 files in other folders)
