[metadata]
name = pint-server
version = 2.0.3
author = Guang Yee
author_email = gyee@suse.com
description = Pint Server
long_description = file: README.rst
long_description_content_type = text/reStructuredText
url = https://github.com/SUSE-Enceladus/public-cloud-info-service
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.6
packages = pint_server
