[bumpversion]
current_version = 2.0.17
commit = True
tag = True

[bumpversion:file:pint_server/__init__.py]

[bumpversion:file:package/python-PintServer.spec]

[metadata]
name = pint-server
version = attr: pint_server.__VERSION__
author = Guang Yee
author_email = gyee@suse.com
description = Pint Server
long_description = file: README.rst
long_description_content_type = text/reStructuredText
url = https://github.com/SUSE-Enceladus/public-cloud-info-service
classifier = 
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: "3.10"
	Programming Language :: Python :: 3.11

[options]
python_requires > = 3.11
packages = pint_server
